# MutCleaner

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
doc/changelog/: CHANGELOG_0.1.0.md
doc/source/: conf.py  index.rst
doc/source/_static/: custom.css
doc/source/api/: index.rst
doc/source/user_guide/: cleaners.md  common_workflow.md  index.rst  overview.md  save_data.md  supported_datasets.md
mutcleaner/: __init__.py  py.typed
mutcleaner/cleaners/: __init__.py  alphaseq_ab_14_cleaner.py  antitoxin_pard3_cleaner.py  antitoxin_pard3_custom_cleaners.py  archstabms_1e10_cleaner.py  base_config.py  basic_cleaners.py  cdna_proteolysis_cleaner.py  ctxm_cleaner.py  ddg_dtm_cleaners.py  human_domainome_sup2_cleaner.py  human_domainome_sup4_cleaner.py  human_myoglobin_cleaner.py  proteingym_dms_substitutions_cleaner.py  proteingym_dms_substitutions_custom_cleaners.py  rbd_ace2_cleaner.py  rbd_ace2_custom_cleaners.py  rbd_antibody_cleaner.py  rbd_custom_cleaners.py  trpb_cleaner.py
mutcleaner/core/: alphabet.py  codon.py  constants.py  dataset.py  mutation.py  pipeline.py  sequence.py  types.py
mutcleaner/utils/: __init__.py  cleaner_workers.py  data_source.py  dataset_builders.py  mutation_converter.py  raw_data_downloader.py  sequence_io.py
tests/: test_dataset.py  test_mutation.py  test_pipeline.py  test_sequence.py
tidymut/cleaners/: __init__.py  basic_cleaners.py  chitosanase_cleaner.py  ctxm_cleaner.py  nucb_cleaner.py  rbd_ace2_cleaner.py  rbd_antibody_cleaner.py  trpb_cleaner.py
tools/: changelog.py  release.sh
